--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <div class="profile-img">
-    <img src="IMG-fotoku.jpg" alt="Foto Profil" class="img-fluid rounded-circle" style="width: 100%; height: 100%; object-fit: cover;">
+    <img src="IMG-fotoule.jpg" alt="Foto Profil" class="img-fluid rounded-circle" style="width: 100%; height: 100%; object-fit: cover;">
 </div>
 
            <div class="col-md-6 text-center">
