--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="social-links">
-                    <a href="https://instagram.com/username" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://instagram.com/j4lil_00e" target="_blank"><i class="bi bi-instagram"></i></a>
                     <a href="https://github.com/j4lil_00" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
